# resvg-wasm

./: .gitignore  Cargo.toml  README.md  build.ts  mod.ts  test.ts
lib/: resvg.generated.js  resvg_wasm_bg.wasm
src/: lib.rs
