[package]
name = "resvg_wasm"
version = "0.1.0"
edition = "2021"
description = "Deno wasm bindings for resvg"
authors = ["Kitson P. Kelly"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "resvg_wasm"

[dependencies]
js-sys = "0.3.55"
resvg = "0.19.0"
tiny-skia = "0.6.1"
usvg = { version = "0.19.0", default-features = false, features = ["text"] }
wasm-bindgen = "0.2.78"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "s"